--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-Word2Vec
 pandas==2.0.3
 numpy==1.24.4
 gdown==4.7.1
 pyarrow==12.0.1
 fastparquet==2023.8.0
-transformers==4.33.2
-torch==2.0.1
+transformers>=4.39.0
+torch>=2.8.0
 codecarbon==2.3.2
 scikit-learn==1.3.2
-sentence-transformers==2.2.2
+sentence-transformers>=2.6.1
 gensim==4.3.2
 tqdm==4.66.1
+huggingface_hub==0.20.3
+matplotlib
